added syllabus button

--- a/index.html
+++ b/index.html
@@ -64,7 +64,12 @@
 
         <div id='title' class="text-white m-auto">
             <p class="text-center">
-                Tutoring students and professionals one session at the time
+                Learn data analytics or web development at your own pace
+                <br>
+                <button type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false"
+                    aria-controls="collapseTwo">
+                    Syllabus
+                </button>
             </p>
             <a target="_blank" href="https://linkedin.com/in/geronimoperez">
                 <img src="./assets/images/linkedIn.png" class="titleImg">
@@ -75,11 +80,29 @@
             <!-- <a target="_blank" href="https://g.page/r/CeWB47Bolh99EAI/review">
                 <img class="titleImg1" src="./assets/images/Google-Reviews.png">
             </a> -->
+
             <a target="_blank" href="https://g.page/r/CeWB47Bolh99EAI/review">
                 <img class="titleImg1" src="./assets/images/google-reviews2.png">
             </a>
         </div>
+        <div >
+            <h3>** FACE-TO-FACE PRIVATE LESSONS **</h3>
+            <h2>schedule Session</h2>
+            <div>
 
+                <a target="_blank"
+                    href="https://calendly.com/geronimo-perez/private-tutoring-session"><button id="analyst"
+                        class="btn btn-outline-primary">
+                        <h6 class="g-font">Data Analytics</h6>
+                    </button></a>
+
+                <a target="_blank"
+                    href="https://calendly.com/geronimo-perez/private-tutoring-session"><button
+                        id="developer" class="btn btn-outline-primary">
+                        <h6 class="g-font">Web Development</h6>
+                    </button></a>
+            </div>
+        </div>
         <div class="accordion accordion-flush" id="accordionExample">
 
             <div class="accordion-item">
@@ -263,8 +286,10 @@
                 <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body professionalDiv">
-                        <h3 class="modal-title text-center" id="exampleModalLabel">** 60 MINS FACE 2 FACE PRIVATE VIDEO CALLS **</h3>
-                        <h3 class="modal-title text-center" id="exampleModalLabel2">** 60 MINS FACE 2 FACE PRIVATE ** <br>** VIDEO CALLS **</h3>
+                        <h3 class="modal-title text-center" id="exampleModalLabel">** FACE-TO-FACE PRIVATE LESSONS **
+                        </h3>
+                        <h3 class="modal-title text-center" id="exampleModalLabel2">** FACE-TO-FACE PRIVATE ** <br>**
+                            LESSONS **</h3>
                         <h2>schedule Session</h2>
                         <div class="scheduleDiv">
 
@@ -332,7 +357,8 @@
         <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content studentModal">
                 <div class="modal-header">
-                    <h3 class="modal-title text-center" id="exampleModalLabel">** 60 MINS FACE 2 FACE PRIVATE VIDEO CALLS **</h3>
+                    <h3 class="modal-title text-center" id="exampleModalLabel">** FACE-TO-FACE PRIVATE VIDEO CALLS **
+                    </h3>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body professionalModal">
