completed desktop view

--- a/index.html
+++ b/index.html
@@ -13,15 +13,6 @@
 </head>
 
 <body>
-    <nav>
-        <button data-bs-toggle="modal" data-bs-target="#exampleModal">
-            students
-        </button>
-
-        <button data-bs-toggle="modal" data-bs-target="#exampleModal2">
-            post classes
-        </button>
-    </nav>
 
     <div id="topDiv">
         <div class="sessions">
@@ -85,73 +76,10 @@
                 <img class="titleImg1" src="./assets/images/google-reviews2.png">
             </a>
         </div>
-        <div >
-            <h3>** FACE-TO-FACE PRIVATE LESSONS **</h3>
-            <h2>schedule Session</h2>
-            <div>
-
-                <a target="_blank"
-                    href="https://calendly.com/geronimo-perez/private-tutoring-session"><button id="analyst"
-                        class="btn btn-outline-primary">
-                        <h6 class="g-font">Data Analytics</h6>
-                    </button></a>
-
-                <a target="_blank"
-                    href="https://calendly.com/geronimo-perez/private-tutoring-session"><button
-                        id="developer" class="btn btn-outline-primary">
-                        <h6 class="g-font">Web Development</h6>
-                    </button></a>
-            </div>
-        </div>
+       
         <div class="accordion accordion-flush" id="accordionExample">
 
             <div class="accordion-item">
-                <h2 class="accordion-item" id="headingTwo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        <h4 class="mx-auto">students</h4>
-                    </button>
-                </h2>
-                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-                    data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        <p class="forStudents2">These sessions are for students registered in the Data Visualization or
-                            Full Stack Web Developer boot camp and are allowed to have one or more sessions per week.
-                        </p>
-
-                        <h2>Schedule Session</h2>
-
-                        <div class="scheduleDiv">
-
-                            <a target="_blank" href="https://calendly.com/dv-tutor-team/geronimo-perez"><button
-                                    id="analyst" class="btn btn-outline-primary">
-                                    <h6 class="g-font">Data Analytics</h6>
-                                </button></a>
-
-                            <a target="_blank" href="https://calendly.com/fsf-tutor-team/geronimo-perez"><button
-                                    id="developer" class="btn btn-outline-primary">
-                                    <h6 class="g-font">Web Development</h6>
-                                </button></a>
-                        </div>
-
-                        <h2 class="evalTitle">Evaluation</h2>
-                        <a target="_blank"
-                            href="https://docs.google.com/forms/d/e/1FAIpQLSdb4ejjbqoqKO-Q4k7zeO_xwykwB0dxYLWYm1mX5Ik45MzEeg/viewform">
-                            <button id="evaluation">
-                                <h6 class="g-font">Student's Evaluation</h6>
-                            </button>
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="accordion-item">
-                <h2 class="accordion-item" id="headingTwo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseTwo">
-                        <h4 class="mx-auto">knowledge base</h4>
-                    </button>
-                </h2>
                 <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body knowledgeDiv">
@@ -275,114 +203,28 @@
                 </div>
             </div>
 
-            <div class="accordion-item">
-                <h2 class="accordion-item" id="headingTwo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseTwo">
-                        <h4 class="mx-auto">post classes</h4>
-                    </button>
-                </h2>
-
-                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-                    data-bs-parent="#accordionExample">
-                    <div class="accordion-body professionalDiv">
-                        <h3 class="modal-title text-center" id="exampleModalLabel">** FACE-TO-FACE PRIVATE LESSONS **
-                        </h3>
-                        <h3 class="modal-title text-center" id="exampleModalLabel2">** FACE-TO-FACE PRIVATE ** <br>**
-                            LESSONS **</h3>
-                        <h2>schedule Session</h2>
-                        <div class="scheduleDiv">
-
-                            <a target="_blank"
-                                href="https://calendly.com/geronimo-perez/private-tutoring-session"><button id="analyst"
-                                    class="btn btn-outline-primary">
-                                    <h6 class="g-font">Data Analytics</h6>
-                                </button></a>
-
-                            <a target="_blank"
-                                href="https://calendly.com/geronimo-perez/private-tutoring-session"><button
-                                    id="developer" class="btn btn-outline-primary">
-                                    <h6 class="g-font">Web Development</h6>
-                                </button></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
         </div>
+        <div class="schedule">
+            <h3>** 60 MINS FACE-TO-FACE PRIVATE LESSONS **</h3>
+            <div>
 
+                <a target="_blank"
+                    href="https://calendly.com/geronimo-perez/private-tutoring-session"><button id="analyst"
+                        class="btn btn-outline-primary">
+                        <h6 class="g-font">Data Analytics</h6>
+                    </button></a>
+
+                <a target="_blank"
+                    href="https://calendly.com/geronimo-perez/private-tutoring-session"><button
+                        id="developer" class="btn btn-outline-primary">
+                        <h6 class="g-font">Web Development</h6>
+                    </button></a>
+            </div>
+        </div>
     </div>
 
     <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-            <div class="modal-content studentModal">
-                <div class="modal-header">
-                    <h1 class="modal-title text-center" id="exampleModalLabel">Students</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="accordion-body">
-                        <p class="forStudents">These sessions are for students registered in the Data Visualization or
-                            Full Stack Web Developer boot camp and are allowed to have one or more sessions per week.
-                        </p>
-                        <h2>Schedule Session</h2>
-                        <div class="scheduleDiv">
-
-                            <a target="_blank" href="https://calendly.com/dv-tutor-team/geronimo-perez"><button
-                                    id="analyst" class="btn btn-outline-primary">
-                                    <h6 class="g-font">Data Analytics</h6>
-                                </button></a>
-
-                            <a target="_blank" href="https://calendly.com/fsf-tutor-team/geronimo-perez"><button
-                                    id="developer" class="btn btn-outline-primary">
-                                    <h6 class="g-font">Web Development</h6>
-                                </button></a>
-                        </div>
-
-                        <h2 class="evalTitle">Evaluation</h2>
-                        <a target="_blank"
-                            href="https://docs.google.com/forms/d/e/1FAIpQLSdb4ejjbqoqKO-Q4k7zeO_xwykwB0dxYLWYm1mX5Ik45MzEeg/viewform">
-                            <button id="evaluation">
-                                <h6 class="g-font">Student's Evaluation</h6>
-                            </button>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-            <div class="modal-content studentModal">
-                <div class="modal-header">
-                    <h3 class="modal-title text-center" id="exampleModalLabel">** FACE-TO-FACE PRIVATE VIDEO CALLS **
-                    </h3>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body professionalModal">
-                    <div class="accordion-body">
-                        <h2>Schedule Session</h2>
-                        <div class="scheduleDiv">
-
-                            <a target="_blank"
-                                href="https://calendly.com/geronimo-perez/private-tutoring-session"><button id="analyst"
-                                    class="btn btn-outline-primary">
-                                    <h6 class="g-font">Data Analytics</h6>
-                                </button></a>
-
-                            <a target="_blank"
-                                href="https://calendly.com/geronimo-perez/private-tutoring-session"><button
-                                    id="developer" class="btn btn-outline-primary">
-                                    <h6 class="g-font">Web Development</h6>
-                                </button></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <div id="typeDiv">
         <div id="titleDiv">
