completed mobile portrait responsiveness

--- a/index.html
+++ b/index.html
@@ -206,7 +206,8 @@
 
         </div>
         <div class="schedule">
-            <h3>** 60 MINS FACE-TO-FACE PRIVATE LESSONS **</h3>
+            <h3 class="scheduleTitle1">** 60 MINS FACE-TO-FACE PRIVATE LESSONS **</h3>
+            <h3 class="scheduleTitle2">** 60 MINS FACE-TO-FACE ** <br> ** PRIVATE LESSONS **</h3>
             <div>
 
                 <a target="_blank"
