--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 <body>
 
+    <a href="mailto:concerns@analyticsandwebdevelopment.com" id="emailUs"><img src="./assets/images/emailUs.png" alt="email us"></a>
+
     <div id="topDiv">
         <div class="sessions">
             <h4 class="text-center text-white fst-italic">Tutored over
@@ -248,6 +250,8 @@
 
     <div id="carousel">
     </div>
+
+    <a href="mailto:concerns@AnalyticsAndWebDevelopment.com"> <button id="emailBtn">✉ Email us</button> </a>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
         integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi"
