modified email us image

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <a href="mailto:concerns@analyticsandwebdevelopment.com" id="emailUs"><img src="./assets/images/emailUs.png" alt="email us"></a>
+    <a href="mailto:concerns@analyticsandwebdevelopment.com" id="emailUs"><img src="./assets/images/emailUs3.png" alt="email us"></a>
 
     <div id="topDiv">
         <div class="sessions">
