modified link buttons

--- a/index.html
+++ b/index.html
@@ -208,20 +208,20 @@
 
         </div>
         <div class="schedule">
-            <h3 class="scheduleTitle1">** 60 MINS FACE-TO-FACE PRIVATE LESSONS **</h3>
-            <h3 class="scheduleTitle2">** 60 MINS FACE-TO-FACE ** <br> ** PRIVATE LESSONS **</h3>
+            <h3 class="scheduleTitle1">** 60 minutes video call private lessons **</h3>
+            <h3 class="scheduleTitle2">** 60 MINUTES VIDEO CALL ** <br> ** PRIVATE LESSONS **</h3>
             <div>
 
                 <a target="_blank"
                     href="https://calendly.com/geronimo-perez/private-tutoring-session"><button id="analyst"
                         class="btn btn-outline-primary">
-                        <h6 class="g-font">Data Analytics</h6>
+                        <h3 class="g-font">Data Analytics</h3>
                     </button></a>
 
                 <a target="_blank"
                     href="https://calendly.com/geronimo-perez/private-tutoring-session"><button
                         id="developer" class="btn btn-outline-primary">
-                        <h6 class="g-font">Web Development</h6>
+                        <h3 class="g-font">Web Development</h3>
                     </button></a>
             </div>
         </div>
