--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <div id='title' class="text-white m-auto">
             <p class="text-center">
-                Learn data analytics or web development at your own pace
+                Learn data analytics and/or web development at your own pace
                 <br>
                 <button type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false"
                     aria-controls="collapseTwo">
