--- a/index.html
+++ b/index.html
@@ -214,15 +214,13 @@
             <h3 class="scheduleTitle2">** 60 MINUTES VIDEO CALL ** <br> ** PRIVATE LESSONS **</h3>
             <div>
 
-                <a target="_blank" href="https://calendly.com/geronimo-perez/private-tutoring-session"><button
-                        id="analyst" class="btn btn-outline-primary">
-                        <h3 class="g-font">Data Analytics</h3>
-                    </button></a>
+                <button id="analyst" class="btn btn-outline-primary">
+                    <h3 class="g-font">Data Analytics</h3>
+                </button>
 
-                <a target="_blank" href="https://calendly.com/geronimo-perez/private-tutoring-session"><button
-                        id="developer" class="btn btn-outline-primary">
-                        <h3 class="g-font">Web Development</h3>
-                    </button></a>
+                <button id="developer" class="btn btn-outline-primary">
+                    <h3 class="g-font">Web Development</h3>
+                </button>
             </div>
         </div>
     </div>
@@ -253,28 +251,45 @@
 
     <a href="mailto:concerns@AnalyticsAndWebDevelopment.com"> <button id="emailBtn">✉ Email us</button> </a>
 
-    <!-- <div id="myModal">
-    </div> -->
-    
-    
-    <div id="myModal" class="modal">
+    <div id="myModal1" class="modal myModal">
         <div class="modal-content">
             <span class="close">&times;</span>
-            <div class="calendly-inline-widget" data-url="https://calendly.com/geronimo-perez/5-sessions-bundle"
+            <div class="calendly-inline-widget"
+                data-url="https://calendly.com/geronimo-perez/5-sessions-bundle?background_color=7e2832&text_color=ffffff&primary_color=ffeb3b"
                 style="min-width:320px;height:800px;"></div>
         </div>
-  </div>
+    </div>
 
+    <div id="myModal2" class="modal myModal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <div class="calendly-inline-widget"
+                data-url="https://calendly.com/geronimo-perez/private-tutoring-session?background_color=007d7d&text_color=fffafa&primary_color=ffeb3b"
+                style="min-width:320px;height:800px;"></div>
+        </div>
+    </div>
+
+    <div id="myModal3" class="modal myModal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <div class="calendly-inline-widget"
+                data-url="https://calendly.com/geronimo-perez/private-tutoring-session?background_color=0277bd&text_color=fffafa&primary_color=ffeb3b"
+                style="min-width:320px;height:800px;"></div>
+        </div>
+    </div>
 
 
     <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
         integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi"
         crossorigin="anonymous"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
         integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG"
         crossorigin="anonymous"></script>
+
     <script src="https://d3js.org/d3.v6.min.js"></script>
+
     <script src="./assets/js/speech.js"></script>
     <script src="./assets/js/app.js"></script>
 
