--- a/index.html
+++ b/index.html
@@ -12,12 +12,25 @@
     <title>Analytics And Web Development</title>
 
     <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-5NP8H7W');</script>
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-5NP8H7W');</script>
     <!-- End Google Tag Manager -->
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CVD9YG3HKH"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-CVD9YG3HKH');
+    </script>
 </head>
 
 <body>
@@ -231,9 +244,10 @@
         </div>
         <div class="type">
         </div>
-        
+
         <div id="rewind">
-            <h1><<</h1>
+            <h1>
+                <<< /h1>
         </div>
         <div id="forward">
             <h1>>></h1>
@@ -245,47 +259,55 @@
 
     <a href="mailto:concerns@AnalyticsAndWebDevelopment.com"> <button id="emailBtn">✉ Email us</button> </a>
 
-    <div id="myModal1" class="modal myModal">
+    <!-- <div id="myModal1" class="modal myModal">
         <div class="modal-content">
             <span class="close">&times;</span>
             <div class="calendly-inline-widget"
                 data-url="https://calendly.com/geronimo-perez/5-sessions-bundle?background_color=7e2832&text_color=ffffff&primary_color=ffeb3b"
                 style="min-width:320px;height:800px;"></div>
         </div>
-    </div>
+    </div> -->
 
-    <div id="myModal2" class="modal myModal">
+    <div id="myModal1" class="modal myModal">
         <div class="modal-content">
             <span class="close">&times;</span>
             <div class="calendly-inline-widget"
-                data-url="https://calendly.com/geronimo-perez/private-tutoring-session?background_color=007d7d&text_color=fffafa&primary_color=ffeb3b"
-                style="min-width:320px;height:800px;"></div>
+                data-url="https://calendly.com/geronimo-perez/private-tutoring-session-1"
+                style="min-width:320px;height:630px;"></div>
         </div>
-    </div>
 
-    <div id="myModal3" class="modal myModal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <div class="calendly-inline-widget"
-                data-url="https://calendly.com/geronimo-perez/private-tutoring-session?background_color=0277bd&text_color=fffafa&primary_color=ffeb3b"
-                style="min-width:320px;height:800px;"></div>
+        <div id="myModal2" class="modal myModal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <div class="calendly-inline-widget"
+                    data-url="https://calendly.com/geronimo-perez/private-tutoring-session?background_color=007d7d&text_color=fffafa&primary_color=ffeb3b"
+                    style="min-width:320px;height:800px;"></div>
+            </div>
         </div>
-    </div>
+
+        <div id="myModal3" class="modal myModal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <div class="calendly-inline-widget"
+                    data-url="https://calendly.com/geronimo-perez/private-tutoring-session?background_color=0277bd&text_color=fffafa&primary_color=ffeb3b"
+                    style="min-width:320px;height:800px;"></div>
+            </div>
+        </div>
 
 
-    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
-        integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi"
-        crossorigin="anonymous"></script>
+        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
+            integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi"
+            crossorigin="anonymous"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
-        integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG"
-        crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
+            integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG"
+            crossorigin="anonymous"></script>
 
-    <script src="https://d3js.org/d3.v6.min.js"></script>
+        <script src="https://d3js.org/d3.v6.min.js"></script>
 
-    <script src="./assets/js/speech.js"></script>
-    <script src="./assets/js/app.js"></script>
+        <script src="./assets/js/speech.js"></script>
+        <script src="./assets/js/app.js"></script>
 
 </body>
 
