move carousel to top

--- a/index.html
+++ b/index.html
@@ -34,64 +34,48 @@
 </head>
 
 <body>
-    <a id="sale" class="calendly-badge-content"><img src="./assets/images/sale.png" alt="5 sessions sale"></a>
-
-    <a href="mailto:concerns@analyticsandwebdevelopment.com" id="emailUs"><img src="./assets/images/emailUs3.png"
-            alt="email us"></a>
+    <!-- <a id="sale" class="calendly-badge-content"><img src="./assets/images/sale.png" alt="5 sessions sale"></a> -->
 
     <div id="topDiv">
-        <div class="sessions">
-            <h4 class="text-center text-white fst-italic">Tutored over
-                <span class="hours">
-                    <svg class="smoke">
-                        <ellipse class="eli1"></ellipse>
-                        <ellipse class="eli2"></ellipse>
-                    </svg>
-                    <svg class="fire">
-                        <circle class="child_10"></circle>
-                        <circle class="child_1"></circle>
-                        <ellipse class="child_2"></ellipse>
-                        <circle class="child_3"></circle>
-                        <ellipse class="child_5"></ellipse>
-                        <ellipse class="child_6"></ellipse>
-                        <circle class="child_7"></circle>
-                        <circle class="child_4"></circle>
-                        <ellipse class="child_8"></ellipse>
-                        <ellipse class="child_9"></ellipse>
-                    </svg>
-                    <svg id="hours">
-                        <g>
-                            <text x='8' y='40' class="textShadow">4</text>
-                            <text x='2' y='38' class="textLetter">4</text>
-                            <text x='26' y='40' class="textShadow">,</text>
-                            <text x='24' y='38' class="textLetter">,</text>
-                            <text x='34' y='40' class="textShadow">0</text>
-                            <text x='28' y='38' class="textLetter">0</text>
-                            <text x='54' y='40' class="textShadow">0</text>
-                            <text x='48' y='38' class="textLetter">0</text>
-                            <text x='74' y='40' class="textShadow">0</text>
-                            <text x='68' y='38' class="textLetter">0</text>
-                        </g>
-                    </svg>
-                </span>
-                sessions
-            </h4>
-        </div>
-
-        <div id='title' class="text-white m-auto">
-            <p class="text-center">
+        <div id='title'>
+            <p>
                 Learn data analytics and/or web development at your own pace
             </p>
-            <a target="_blank" href="https://linkedin.com/in/geronimoperez">
-                <img src="./assets/images/linkedIn.png" class="titleImg">
-            </a>
-            <button type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false"
-                aria-controls="collapseTwo">
-                Syllabus
-            </button>
-            <a target="_blank" href="https://g.page/r/CeWB47Bolh99EAI/review">
-                <img class="titleImg1" src="./assets/images/google-reviews2.png">
-            </a>
+            <div>
+
+                <a target="_blank" href="https://linkedin.com/in/geronimoperez">
+                    <img src="./assets/images/linkedIn.png" class="titleImg">
+                </a>
+                <button type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false"
+                    aria-controls="collapseTwo">
+                    Syllabus
+                </button>
+                <a target="_blank" href="https://g.page/r/CeWB47Bolh99EAI/review">
+                    <img class="titleImg1" src="./assets/images/google-reviews2.png">
+                </a>
+                <a href="mailto:concerns@analyticsandwebdevelopment.com" id="emailUs"><img
+                        src="./assets/images/emailUs3.png" alt="email us"></a>
+            </div>
+        </div>
+
+        <div id="carouselContainer">
+          
+            <div id="typeDiv">
+                <div id="titleDiv">
+                    <h4 id="speechTitle" class="scroll2"></h4>
+                </div>
+                <div class="type">
+                </div>
+
+                <div id="rewind">
+                    <h1><<</h1>
+                </div>
+                <div id="forward">
+                    <h1>>></h1>
+                </div>
+            </div>
+            <div id="carousel">
+            </div>
         </div>
 
         <div class="accordion accordion-flush" id="accordionExample">
@@ -220,13 +204,9 @@
                 </div>
             </div>
 
-
         </div>
         <div class="schedule">
-            <h3 class="scheduleTitle1">** 60 minutes video call private lessons **</h3>
-            <h3 class="scheduleTitle2">** 60 MINUTES VIDEO CALL ** <br> ** PRIVATE LESSONS **</h3>
             <div>
-
                 <button id="analyst" class="btn btn-outline-primary">
                     <h3 class="g-font">Data Analytics</h3>
                 </button>
@@ -236,24 +216,6 @@
                 </button>
             </div>
         </div>
-    </div>
-
-    <div id="typeDiv">
-        <div id="titleDiv">
-            <h4 id="speechTitle" class="scroll2"></h4>
-        </div>
-        <div class="type">
-        </div>
-
-        <div id="rewind">
-            <h1><<</h1>
-        </div>
-        <div id="forward">
-            <h1>>></h1>
-        </div>
-    </div>
-
-    <div id="carousel">
     </div>
 
     <a href="mailto:concerns@AnalyticsAndWebDevelopment.com"> <button id="emailBtn">✉ Email us</button> </a>
