--- a/index.html
+++ b/index.html
@@ -40,14 +40,18 @@
                 <h3>.com</h3>
             </div>
         </div>
+
+        <img id="asteroid" src="./assets/images/asteroid.png" alt="">
+
         <div id="logoCir"></div>
         <div id="links">
+            <!-- <a href="#">Focus Points</a> -->
             <a target="_blank" href="https://g.page/r/CeWB47Bolh99EAI/review">Reviews Us On Google</a>
             <a target="_blank" href="https://linkedin.com/in/geronimoperez">Find Us On LinkedIn</a>
             <a href="mailto:concerns@analyticsandwebdevelopment.com" id="emailUs">Email Us</a>
         </div>
         <svg class="logo">
-            <polygon fill="red" points="
+            <polygon fill="teal" points="
                 294.5,155 
                 301,162 
                 308.5,157 
@@ -79,19 +83,19 @@
         </svg>
     </nav>
 
-    <button type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false"
-        aria-controls="collapseTwo">
-        Syllabus
-    </button>
-
+    <div id="title">
+        <h1>Data Analysis</h1>
+        <h1>Web Development</h1>
+    </div>
     <div id="carouselContainer">
-
+        <div id="carousel">
+        </div>
         <div id="typeDiv">
             <div id="titleDiv">
-                <h4 id="speechTitle" class="scroll2"></h4>
+                <h4 id="speechTitle"></h4>
             </div>
-            <div class="type">
-            </div>
+
+            <div class="type"></div>
 
             <div id="rewind">
                 <h1>
@@ -101,8 +105,51 @@
                 <h1>>></h1>
             </div>
         </div>
-        <div id="carousel">
+
+    </div>
+
+    <div id="offersDiv">
+        <div id="offersBtns">
+            <div style="width:25%"></div>
+            <button id="class35" class="offersBtns" onclick="handleOffer(this)">$35</button>
+            <button id="class65" class="offersBtns" onclick="handleOffer(this)">$65</button>
+            <button id="class250" class="offersBtns" onclick="handleOffer(this)">$250</button>
         </div>
+        <div id="details">
+            <hr>
+            <h1>Tutor</h1>
+            <input type="radio" disabled class="class35" name="tutor">
+            <input type="radio" disabled class="class65" name="tutor">
+            <input type="radio" disabled class="class250" name="tutor">
+            <h1>Data Analyst</h1>
+            <input type="radio" disabled class="class35" name="analytics">
+            <input type="radio" disabled class="class65" name="analytics">
+            <input type="radio" disabled class="class250" name="analytics">
+            <h1>Web Developer</h1>
+            <input type="radio" disabled class="class35" name="developer">
+            <input type="radio" disabled class="class65" name="developer">
+            <input type="radio" disabled class="class250" name="developer">
+            <hr>
+            <h1>30 mins</h1>
+            <input type="radio" disabled class="class35" name="30mins">
+            <input type="radio" disabled name="30mins">
+            <input type="radio" disabled name="30mins">
+            <h1>60 mins</h1>
+            <input type="radio" disabled name="60mins">
+            <input type="radio" disabled class="class65" name="60mins">
+            <input type="radio" disabled name="60mins">
+            <h1>Five hours</h1>
+            <input type="radio" disabled name="5hours">
+            <input type="radio" disabled name="5hours">
+            <input type="radio" disabled class="class250" name="5hours">
+            <h1>Several Days</h1>
+            <input type="radio" disabled name="muliDays">
+            <input type="radio" disabled name="muliDays">
+            <input type="radio" disabled class="class250" name="muliDays">
+            <hr>
+        </div>
+
+        <button id="scheduleBtn">Schedule Session</button>
     </div>
 
     <div class="accordion accordion-flush" id="accordionExample">
@@ -232,28 +279,6 @@
         </div>
 
     </div>
-    <div class="schedule">
-        <div>
-            <button id="analyst" class="btn btn-outline-primary">
-                <h3 class="g-font">Data Analytics</h3>
-            </button>
-
-            <button id="developer" class="btn btn-outline-primary">
-                <h3 class="g-font">Web Development</h3>
-            </button>
-        </div>
-    </div>
-
-    <div id="offersDiv">
-        <div id="offersBtns">
-            <button>$35</button>
-            <button>$65</button>
-            <button>$250</button>
-        </div>
-    </div>
-    </div>
-
-    <a href="mailto:concerns@AnalyticsAndWebDevelopment.com"> <button id="emailBtn">✉ Email us</button> </a>
 
     <div id="myModal1" class="modal myModal">
         <div class="modal-content">
